# utl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.py  main.cpp  notes.md  pyproject.toml  test_everything.py
.github/workflows/: wheels.yml
include/: builtins.h  decoder.h  def_pool.h  encoder.h  enums.h  field_def.h  map_list.h  message.h  message_def.h  parser.h  static_map.h  string_view.h  type_def.h  utils.h  vector.h
python/: .gitignore  CMakeLists.txt  test_defpool.py  test_everything.py
python/include/: ptr_map.h  py_def_pool.h  pyutl.h  tlobject.h  tltype.h  tlvector.h
python/pyutl/: __init__.py
python/src/: def_pool.c  ptr_map.c  pyutl.c  tlobject.c  tltype.c  tlvector.c
pyutl/: __init__.py  _parser.py  _pyutl.pyi  compiler.py
src/: decoder.c  def_pool.c  encoder.c  field_def.c  map_list.c  message.c  message_def.c  parser.c  static_map.c  string_view.c  utils.c  vector.c
tests/: test_encoding_decoding.c  test_parser.c
utl/: CMakeLists.txt
utl/include/: arena.h  builtins.h  constants.h  decoder.h  def_pool.h  encoder.h  endianness.h  enums.h  field_def.h  map_list.h  message.h  message_def.h  message_ro.h  parser.h  ro.h  static_map.h  status.h  stb_ds.h  string_pool.h  string_view.h  type_def.h  utils.h  vector.h  vector_ro.h
utl/src/: arena.c  decoder.c  def_pool.c  encoder.c  field_def.c  map_list.c  message.c  message_def.c  message_ro.c  parser.c  ro.c  static_map.c  string_pool.c  string_view.c  type_def.c  utils.c  vector.c  vector_ro.c
utl/tests/: test_encoding_decoding.c  test_parser.c  test_string_pool.c
