[tool.poetry]
name = "utl"
version = "0.1.0"
description = "A small Telegram Type Language implementation"
authors = ["RuslanUC <dev_ruslan_uc@protonmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
