[tool.poetry]
name = "utl"
version = "0.1.0b1"
description = "A small Telegram Type Language implementation"
authors = ["RuslanUC <dev_ruslan_uc@protonmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: C",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development",
    "Typing :: Typed",
]
packages = [
    {include = "pyutl"}
]

include = [
    {format = "sdist", path = "CMakeLists.txt"},
    {format = "sdist", path = "ext/arena-allocator/CMakeLists.txt"},
    {format = "sdist", path = "ext/arena-allocator/src/*.c"},
    {format = "sdist", path = "ext/arena-allocator/include/*.h"},
    {format = "sdist", path = "utl/CMakeLists.txt"},
    {format = "sdist", path = "utl/src/*.c"},
    {format = "sdist", path = "utl/include/*.h"},
    {format = "sdist", path = "python/CMakeLists.txt"},
    {format = "sdist", path = "python/src/*.c"},
    {format = "sdist", path = "python/include/*.h"},
]

[tool.poetry.urls]
Homepage = "https://github.com/RuslanUC/utl"
Repository = "https://github.com/RuslanUC/utl"

[tool.poetry.build]
generate-setup-file = true
script = "build.py"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
cibuildwheel = "^2.22.0"

[build-system]
requires = ["poetry-core", "setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.cibuildwheel]
build = "{cp310,cp311,cp312,cp313,pp310}-{many,musl}linux_{x86_64,i686,aarch64,armv7l}"

[tool.cibuildwheel.linux]
archs = ["auto", "aarch64"]